# stowrypy

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: example.py
src/stowrypy/: __init__.py  client.py
tests/: test_client.py
